dongle-smartcontract/test_results_v2.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0425]: cannot find type `ContractError` in this scope
  --> src\lib.rs:43:22
   |
43 |     ) -> Result<u64, ContractError> {
   |                      ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this enum
   |
20 + use crate::errors::ContractError;
   |

warning: unused imports: `publish_verification_approved_event`, `publish_verification_rejected_event`, and `publish_verification_requested_event`
 --> src\verification_registry.rs:5:5
  |
5 |     publish_verification_approved_event, publish_verification_rejected_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |     publish_verification_requested_event,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DataKey`
 --> src\verification_registry.rs:8:20
  |
8 | use crate::types::{DataKey, VerificationRecord, VerificationStatus};
  |                    ^^^^^^^

warning: unused import: `crate::constants::MAX_PROJECTS_PER_USER`
 --> src\test.rs:3:5
  |
3 | use crate::constants::MAX_PROJECTS_PER_USER;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:4:5
  |
4 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FeeConfig` and `VerificationStatus`
 --> src\test.rs:5:20
  |
5 | use crate::types::{FeeConfig, VerificationStatus};
  |                    ^^^^^^^^^  ^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:9:58
  |
9 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

warning: unused variable: `env`
  --> src\verification_registry.rs:15:9
   |
15 |         env: &Env,
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_env`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `project_id`
  --> src\verification_registry.rs:16:9
   |
16 |         project_id: u64,
   |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project_id`

warning: unused variable: `requester`
  --> src\verification_registry.rs:17:9
   |
17 |         requester: Address,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_requester`

warning: unused variable: `evidence_cid`
  --> src\verification_registry.rs:18:9
   |
18 |         evidence_cid: String,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_evidence_cid`

For more information about this error, try `rustc --explain E0425`.
warning: `dongle-contract` (lib) generated 6 warnings
error: could not compile `dongle-contract` (lib) due to 1 previous error; 6 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 10 warnings (6 duplicates)
error: could not compile `dongle-contract` (lib test) due to 1 previous error; 10 warnings emitted
